# unbridaled-python-interview

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  app.json  db.env  docker-compose-dev.yml  docker-compose.yml  setup.py  web.env
.github/workflows/: backend.yml
docs/: readme.md
store/: .flake8  Dockerfile  Procfile  alembic.ini  app.json  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
store/app/: config.py  db.py  main.py  pytest.ini
store/app/models/: product.py  product_variant.py
store/app/routers/v1/: __init__.py  products.py  schemas.py
store/app/services/: product_service.py
store/migrations/: env.py
store/migrations/versions/: 5629d2050167_improve_relationship_declaration_on_.py  87ccd461cfc7_init.py  87d871ce57c2_define_product_table.py  903c8ec67501_add_batch_tracked_column_and_update_.py  93769b168963_save_offset_aware_datetimes.py  9ea9eea9d95d_define_product_variant_table.py  d537939279ea_specify_product_and_productvariant_.py
store/tests/: conftest.py
store/tests/fixtures/: base.py  products.py
store/tests/routers/v1/: test_products.py
