[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["eloy <eloy.colell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
uvicorn = "^0.19.0"
fastapi = "^0.87.0"
sqlalchemy-utils = "^0.38.3"


[tool.poetry.group.dev.dependencies]
docker-compose = "^1.29.2"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
httpx = "^0.23.1"
pytest-xdist = "^3.0.2"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
